--- a/docs/docs/classic-ml/getting-started/databricks-trial/index.mdx
+++ b/docs/docs/classic-ml/getting-started/databricks-trial/index.mdx
@@ -12,7 +12,7 @@ You create account with your email only and won't get charged unless you decide 
 
 ## Start your trial
 
-To get started with Databricks Free Trial, visit the [Databricks Trial Signup Page](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS)
+To get started with Databricks Free Trial, visit the [Databricks Trial Signup Page](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW)
 and follow the instructions outlined there. It takes about 5 minutes to set up, after which you'll have access to a nearly fully-functional Databricks Workspace for logging your tutorial experiments, traces, models, and artifacts.
 
 :::tip
