--- a/docs/docs/classic-ml/traditional-ml/xgboost/quickstart/quickstart-xgboost.ipynb
+++ b/docs/docs/classic-ml/traditional-ml/xgboost/quickstart/quickstart-xgboost.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "In this guide, we will show you how to train a model with XGBoost and log your training using MLflow.\n",
     "\n",
-    "We will be using the [Databricks Free Trial](https://mlflow.org/docs/latest/ml/getting-started/databricks-trial.html), which has built-in support for MLflow. The Databricks Free Trial provides an opportunity to use Databricks platform for free. If you haven't already, please register for an account via [this link](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS).\n",
+    "We will be using the [Databricks Free Trial](https://mlflow.org/docs/latest/ml/getting-started/databricks-trial.html), which has built-in support for MLflow. The Databricks Free Trial provides an opportunity to use Databricks platform for free. If you haven't already, please register for an account via [this link](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW).\n",
     "\n",
     "You can run code in this guide from cloud-based notebooks like Databricks notebook or Google Colab, or run it on your local machine."
    ]
