--- a/docs/docs/genai/developer-workflow/phase1-build-improve.mdx
+++ b/docs/docs/genai/developer-workflow/phase1-build-improve.mdx
@@ -28,12 +28,7 @@ During Phase 1, you'll face several key challenges as you develop and refine you
 
 ### The Problem
 
-Even simple applications with a single prompt can be difficult to debug. As your app grows beyond basic prompts to include external data sources (vector databases, APIs) and tools, debugging becomes increasingly complex:
-
-- **Prompt Construction**: What input data was used for each variable in the prompt template?
-- **Performance Issues**: Is latency due to the LLM or a slow API call?
-- **User Issue Reproduction**: Understanding exactly how user input was processed through each step
-- **Local vs Production**: Seeing the same debugging information in both environments
+Even simple applications with a single prompt can be difficult to debug. As your app grows beyond basic prompts to include external data sources like vector databases and APIs, debugging becomes increasingly complex. You need to understand what input data was used for each variable in your prompt template, determine whether latency issues stem from the LLM or a slow API call, reproduce user issues by understanding exactly how their input was processed through each step, and maintain the same debugging visibility in both local development and production environments.
 
 ### Solution: Implement MLflow Tracing
 
@@ -44,32 +39,32 @@ flowchart TB
     DEV[👨‍💻 Developer]
     IMPL[🔧 Implement MLflow Tracing]
     CODE[📝 Your Application Code]
-    
+
     LOCAL[💻 Local Development]
     PROD[🌐 Production Deployment]
-    
+
     TRACES[📊 Trace Logs]
     UI[🖥️ MLflow Trace UI]
-    
+
     USERS[👥 End Users]
-    
+
     DEV --> IMPL
     IMPL --> CODE
     CODE --> LOCAL
     CODE --> PROD
-    
+
     DEV --> LOCAL
     USERS --> PROD
-    
+
     LOCAL --> TRACES
     PROD --> TRACES
     TRACES --> UI
-    
+
     classDef devStyle fill:#e3f2fd,stroke:#1976d2,stroke-width:2px
     classDef prodStyle fill:#e8f5e8,stroke:#388e3c,stroke-width:2px
     classDef dataStyle fill:#fff3e0,stroke:#f57c00,stroke-width:2px
     classDef userStyle fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
-    
+
     class DEV,LOCAL devStyle
     class PROD prodStyle
     class IMPL,CODE,TRACES,UI dataStyle
@@ -78,23 +73,13 @@ flowchart TB
 
 ### Implementation Benefits
 
-Beyond immediate debugging capabilities, implementing tracing enables future capabilities:
-- **Quality feedback attachment** to specific execution traces
-- **Performance optimization** through detailed timing analysis
-- **Cost tracking** across different configurations
-- **Production monitoring** with the same observability tools
+Beyond immediate debugging capabilities, implementing tracing enables future capabilities including quality feedback attachment to specific execution traces, performance optimization through detailed timing analysis, cost tracking across different configurations, and production monitoring with the same observability tools.
 
 ## Challenge 2: Leverage Test User Queries
 
 ### The Problem
 
-During development, beta testers provide valuable real-world examples that reveal:
-- **Natural language patterns**: How users actually phrase questions
-- **Usage scenarios**: Realistic use cases you hadn't considered
-- **Quality gaps**: Areas where your application underperforms
-- **Edge cases**: Unusual but valid user inputs
-
-You need a systematic way to capture and reuse these examples for testing improvements.
+During development, beta testers provide valuable real-world examples that reveal natural language patterns showing how users actually phrase questions, realistic usage scenarios you hadn't considered, quality gaps where your application underperforms, and edge cases involving unusual but valid user inputs. You need a systematic way to capture and reuse these examples for testing improvements.
 
 ### Solution: Systematic Query Collection
 
@@ -105,48 +90,43 @@ flowchart TB
     USERS[👥 Beta Test Users]
     APP[🚀 Your Application]
     TRACES[📊 Captured Traces]
-    
+
     DEV[👨‍💻 Developer]
     SEARCH[🔍 Search Traces API]
     SELECT[📋 Select Valuable Examples]
     TEST[🧪 Test Improvements]
-    
+
     USERS --> APP
     APP --> TRACES
-    
+
     DEV --> SEARCH
     SEARCH --> TRACES
     TRACES --> SELECT
     SELECT --> TEST
     TEST --> APP
-    
+
     classDef userStyle fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
     classDef appStyle fill:#e8f5e8,stroke:#388e3c,stroke-width:2px
     classDef dataStyle fill:#fff3e0,stroke:#f57c00,stroke-width:2px
     classDef devStyle fill:#e3f2fd,stroke:#1976d2,stroke-width:2px
-    
+
     class USERS userStyle
     class APP appStyle
     class TRACES,SELECT dataStyle
     class DEV,SEARCH,TEST devStyle
 ```
 
-### Key Capabilities
+### Query Collection Workflow
 
-- **Automatic capture** of all user interactions during beta testing
-- **Rich context** including inputs, outputs, timing, and metadata
-- **Programmatic access** via `search_traces` SDK for notebook/IDE integration
-- **Direct reuse** of `trace.inputs` for validation testing
+**Automatic capture** records all user interactions during beta testing with rich context including inputs, outputs, timing, and metadata. **Programmatic access** via the `search_traces` SDK enables notebook and IDE integration for easy exploration. **Direct reuse** allows you to leverage `trace.inputs` for validation testing, making it simple to test improvements against real user queries that previously caused issues or represented important use cases.
+
+The systematic approach ensures you're testing with realistic usage patterns rather than synthetic examples, capturing the natural language variations that users actually employ, and building a comprehensive library of test cases that grows with your application.
 
 ## Challenge 3: Track Quality Feedback
 
 ### The Problem
 
-Even with a small group of test users, you need reliable ways to:
-- **Capture user feedback** on response quality
-- **Log your own observations** during development iteration
-- **Identify problem patterns** across different types of queries
-- **Guide improvement priorities** based on systematic feedback collection
+Even with a small group of test users, you need reliable ways to capture user feedback on response quality, log your own observations during development iteration, identify problem patterns across different types of queries, and guide improvement priorities based on systematic feedback collection. Without structured feedback collection, quality issues can go unnoticed or be difficult to reproduce and fix.
 
 ### Solution: Integrated Feedback Collection
 
@@ -156,35 +136,35 @@ MLflow's feedback system allows you to attach quality assessments directly to tr
 flowchart TB
     USERS[👥 Test Users]
     DEV[👨‍💻 Developer]
-    
+
     APP[🚀 Your Application]
     UI_FEEDBACK[👍👎 In-App Feedback]
     DEV_FEEDBACK[📝 Developer Annotations]
-    
+
     LOG_API[🔧 log_feedback API]
     TRACE_UI[🖥️ MLflow Trace UI]
-    
+
     TRACES[📊 Trace Logs with Feedback]
     ANALYSIS[📈 Quality Analysis]
-    
+
     USERS --> APP
     USERS --> UI_FEEDBACK
     DEV --> DEV_FEEDBACK
-    
+
     UI_FEEDBACK --> LOG_API
     DEV_FEEDBACK --> TRACE_UI
-    
+
     APP --> TRACES
     LOG_API --> TRACES
     TRACE_UI --> TRACES
-    
+
     TRACES --> ANALYSIS
-    
+
     classDef userStyle fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
     classDef devStyle fill:#e3f2fd,stroke:#1976d2,stroke-width:2px
     classDef appStyle fill:#e8f5e8,stroke:#388e3c,stroke-width:2px
     classDef dataStyle fill:#fff3e0,stroke:#f57c00,stroke-width:2px
-    
+
     class USERS userStyle
     class DEV devStyle
     class APP appStyle
@@ -193,21 +173,15 @@ flowchart TB
 
 ### Feedback Collection Methods
 
-- **In-application UI**: Thumbs up/down or free-text feedback captured via `log_feedback` API
-- **MLflow Trace UI**: Direct annotation of traces during development
-- **Review App**: Built-in chat UI for Databricks deployments with automatic feedback integration
+The system supports multiple feedback collection approaches to accommodate different workflows and user types. **In-application UI** enables thumbs up/down or free-text feedback captured via the `log_feedback` API, making it easy for users to provide quick quality assessments without leaving your application. **MLflow Trace UI** allows direct annotation of traces during development, perfect for developers who want to mark specific interactions for further analysis. **Review App** provides a built-in chat UI for Databricks deployments with automatic feedback integration, streamlining the review process for stakeholders.
+
+This multi-channel approach ensures that feedback collection doesn't become a bottleneck while maintaining the structure needed for systematic quality analysis.
 
 ## Challenge 4: Get Domain Expert Input
 
 ### The Problem
 
-During development, you often encounter situations where you need authoritative input:
-- **Correct answers** for queries outside your expertise
-- **Validation** of whether negative user feedback is justified
-- **Priority assessment** for different types of issues
-- **Business stakeholder input** on acceptable response quality
-
-Domain experts need an accessible way to provide structured feedback without technical complexity.
+During development, you often encounter situations where you need authoritative input on correct answers for queries outside your expertise, validation of whether negative user feedback is justified, priority assessment for different types of issues, and business stakeholder input on acceptable response quality. Domain experts need an accessible way to provide structured feedback without requiring technical complexity or deep familiarity with your development tools.
 
 ### Solution: MLflow Review App
 
@@ -218,60 +192,54 @@ flowchart TB
     DEV[👨‍💻 Developer]
     TRACES[📊 Trace Logs]
     TRACE_UI[🖥️ MLflow Trace UI]
-    
+
     SELECT[📋 Select Traces for Review]
     QUESTIONS[❓ Configure Review Questions]
     REVIEW_APP[📱 MLflow Review App]
-    
+
     EXPERTS[👨‍💼 Domain Experts]
     EXPERT_FEEDBACK[💬 Expert Feedback]
-    
+
     ENRICHED_TRACES[📊 Traces with Expert Input]
-    
+
     DEV --> TRACE_UI
     TRACE_UI --> TRACES
     DEV --> SELECT
     DEV --> QUESTIONS
-    
+
     SELECT --> REVIEW_APP
     QUESTIONS --> REVIEW_APP
-    
+
     EXPERTS --> REVIEW_APP
     REVIEW_APP --> EXPERT_FEEDBACK
     EXPERT_FEEDBACK --> ENRICHED_TRACES
-    
+
     TRACES --> ENRICHED_TRACES
-    
+
     classDef devStyle fill:#e3f2fd,stroke:#1976d2,stroke-width:2px
     classDef expertStyle fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
     classDef dataStyle fill:#fff3e0,stroke:#f57c00,stroke-width:2px
     classDef appStyle fill:#e8f5e8,stroke:#388e3c,stroke-width:2px
-    
+
     class DEV devStyle
     class EXPERTS expertStyle
     class TRACES,SELECT,QUESTIONS,EXPERT_FEEDBACK,ENRICHED_TRACES dataStyle
     class TRACE_UI,REVIEW_APP appStyle
 ```
 
-### Review App Features
+### Expert Review Workflow
 
-- **User-friendly interface** that domain experts can use without technical knowledge
-- **Custom questions** tailored to your specific review needs
-- **Automatic integration** with original traces for unified feedback view
-- **Structured collection** of expert assessments and recommendations
+**Review App Features** include a user-friendly interface that domain experts can use without technical knowledge, custom questions tailored to your specific review needs, automatic integration with original traces for unified feedback view, and structured collection of expert assessments and recommendations.
+
+The workflow begins with developers selecting specific traces that need expert validation, often focusing on cases where user feedback was negative or where the correct response is unclear. **Custom questions** can be configured to gather specific insights relevant to your domain, whether that's medical accuracy, legal compliance, customer service appropriateness, or technical correctness.
+
+**Expert Integration** happens seamlessly through the Review App's intuitive interface, where domain experts can review the original user query, see the application's response, and provide structured feedback without needing to understand the underlying technical implementation. This feedback automatically enriches the original traces, creating a comprehensive record that combines technical execution details with authoritative quality assessment.
 
 ## Challenge 5: Systematic Prompt Iteration
 
 ### The Problem
 
-When iterating on prompts and code changes to improve quality, you need:
-- **Systematic testing** of multiple variations against the same inputs
-- **Side-by-side comparison** to quickly identify the best performing version
-- **Version tracking** to promote successful changes to production
-- **Debugging capability** to understand why specific versions succeeded or failed
-- **Expert validation** when needed to confirm quality improvements
-
-Manual testing of variations is time-consuming and error-prone.
+When iterating on prompts and code changes to improve quality, you need systematic testing of multiple variations against the same inputs, side-by-side comparison to quickly identify the best performing version, version tracking to promote successful changes to production, debugging capability to understand why specific versions succeeded or failed, and expert validation when needed to confirm quality improvements. Manual testing of variations is time-consuming and error-prone.
 
 ### Solution: MLflow Evaluation Harness
 
@@ -282,85 +250,74 @@ flowchart TB
     DEV[👨‍💻 Developer]
     VARIANTS[🔄 App Variants to Test]
     INPUTS[📝 Test Inputs]
-    
+
     HARNESS[🧪 MLflow Evaluation Harness]
     RUNS[📊 Evaluation Runs]
     EVAL_UI[🖥️ Evaluation UI]
-    
+
     COMPARE[⚖️ Side-by-Side Comparison]
     BEST[✅ Best Performing Version]
     DEPLOY[🚀 Deploy to Production]
-    
+
     EXPERTS[👨‍💼 Domain Experts]
     REVIEW[📱 Review App]
-    
+
     DEV --> VARIANTS
     DEV --> INPUTS
-    
+
     VARIANTS --> HARNESS
     INPUTS --> HARNESS
     HARNESS --> RUNS
     RUNS --> EVAL_UI
-    
+
     EVAL_UI --> COMPARE
     COMPARE --> BEST
     BEST --> DEPLOY
-    
+
     RUNS --> REVIEW
     EXPERTS --> REVIEW
-    
+
     classDef devStyle fill:#e3f2fd,stroke:#1976d2,stroke-width:2px
     classDef evalStyle fill:#fff3e0,stroke:#f57c00,stroke-width:2px
     classDef expertStyle fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
     classDef prodStyle fill:#e8f5e8,stroke:#388e3c,stroke-width:2px
-    
+
     class DEV devStyle
     class VARIANTS,INPUTS,HARNESS,RUNS,EVAL_UI,COMPARE evalStyle
     class EXPERTS,REVIEW expertStyle
     class BEST,DEPLOY prodStyle
 ```
 
-### Evaluation Workflow Benefits
+### Systematic Evaluation Process
 
-- **Minimal setup**: Run multiple variants against selected inputs with simple configuration
-- **Visual comparison**: Side-by-side output analysis in the Evaluation UI
-- **Version tracking**: Maintain history of code and prompt changes
-- **Expert integration**: Share evaluation results with domain experts when needed
-- **Historical record**: Track which changes led to improvements over time
+**Minimal setup** allows you to run multiple variants against selected inputs with simple configuration, eliminating the manual effort of testing each variation individually. **Visual comparison** through the Evaluation UI provides side-by-side output analysis, making it easy to spot differences in quality, tone, accuracy, or completeness across different versions.
+
+**Version tracking** maintains a complete history of code and prompt changes, enabling you to understand which modifications led to improvements and which caused regressions. **Expert integration** allows you to share evaluation results with domain experts when technical assessment isn't sufficient to determine the best approach.
+
+**Historical record** keeping tracks which changes led to improvements over time, building institutional knowledge about what works well for your specific use case and domain. This systematic approach transforms prompt iteration from a manual, error-prone process into a reliable, data-driven workflow that builds confidence in your improvements.
 
 ## Phase 1 Summary
 
-By the end of Phase 1, you will have established a robust foundation for GenAI application development:
+By the end of Phase 1, you will have established a robust foundation for GenAI application development with comprehensive infrastructure, active data collection, systematic quality improvement processes, and readiness for scaling to broader deployment.
 
-#### 🔧 **Infrastructure Established**
-- **MLflow Tracing** implemented for complete observability
-- **Feedback collection** systems for user and developer input
-- **Expert review** workflows for authoritative validation
-- **Evaluation harness** for systematic testing
+### Infrastructure Established
 
-#### 📊 **Data Collection Active**
-- **Real user queries** captured from beta testing
-- **Quality feedback** systematically collected and organized
-- **Performance metrics** tracked across different scenarios
-- **Expert assessments** integrated with trace data
+Your technical foundation includes **MLflow Tracing** implemented for complete observability across all application components, **feedback collection** systems that capture input from both users and developers, **expert review** workflows that provide authoritative validation without technical barriers, and an **evaluation harness** for systematic testing of improvements.
 
-#### 🎯 **Quality Improvement Process**
-- **Systematic testing** of prompt and code variations
-- **Data-driven decisions** based on real user interactions
-- **Expert validation** of improvements before broader deployment
-- **Version tracking** for confident promotion of successful changes
+### Data Collection Active
 
-#### 🚀 **Ready for Scale**
-Your Phase 1 implementation creates the foundation for:
-- **Production deployment** with comprehensive monitoring
-- **Automated quality assessment** using production data
-- **Continuous improvement** cycles based on systematic evaluation
-- **Scalable feedback collection** from larger user bases
+Your systematic data collection captures **real user queries** from beta testing that reflect natural usage patterns, **quality feedback** that's systematically collected and organized for analysis, **performance metrics** tracked across different scenarios to understand application behavior, and **expert assessments** integrated directly with trace data for comprehensive quality evaluation.
+
+### Quality Improvement Process
+
+The systematic approach to quality improvement includes **systematic testing** of prompt and code variations against realistic inputs, **data-driven decisions** based on real user interactions rather than assumptions, **expert validation** of improvements before broader deployment, and **version tracking** for confident promotion of successful changes to production.
+
+### Ready for Scale
+
+Your Phase 1 implementation creates the foundation for **production deployment** with comprehensive monitoring capabilities, **automated quality assessment** using production data patterns, **continuous improvement** cycles based on systematic evaluation rather than ad-hoc changes, and **scalable feedback collection** from larger user bases without overwhelming manual processes.
 
 ## Next Steps
 
-With Phase 1 complete, you're ready to move to:
-
-- **[Phase 2: Production Deployment](/genai/developer-workflow/phase2-systematically-test)**: Scale your application to serve real users with confidence
+With Phase 1 complete, you're ready to move to **[Phase 2: Systematically Testing Quality, Cost, and Latency](/genai/developer-workflow/phase2-systematically-test)** where you'll scale your application to serve real users with confidence through systematic testing and performance optimization.
 
 Phase 1 establishes the systematic development practices that will serve you throughout your GenAI application's lifecycle, ensuring reliable quality improvement and confident scaling.
