--- a/docs/docs/genai/eval-monitor/concepts/built-in-scorers.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/built-in-scorers.mdx
@@ -3,349 +3,297 @@ import TabItem from "@theme/TabItem";
 
 # Predefined LLM Judge Scorers - Concepts
 
-Predefined LLM judge scorers provide ready-to-use evaluation implementations for common GenAI quality dimensions. These scorers wrap proven evaluation methodologies, allowing you to quickly assess your application's performance without building custom evaluation logic from scratch.
+Predefined LLM judge scorers provide ready-to-use evaluation implementations for common GenAI quality dimensions. Understanding the platform differences is crucial for choosing the right evaluation approach for your needs.
 
-Understanding the capabilities and requirements of each predefined scorer helps you choose the right evaluation approach for your application and platform. This guide explains what each scorer evaluates, how it works, and what requirements your application must meet to use it effectively.
+## Platform Architecture Overview
 
-## How Predefined Scorers Work
-
-All predefined scorers follow a consistent evaluation workflow:
-
-1. **Trace Analysis**: The scorer examines your MLflow trace to extract required data (inputs, outputs, retrieved context, tool calls)
-2. **Judge Application**: An underlying LLM judge or heuristic method evaluates the extracted data against specific quality criteria
-3. **Feedback Generation**: The scorer returns structured feedback with scores, rationales, and metadata for analysis
-
-**Key Requirements for All Predefined Scorers**:
-- Your application must use MLflow Tracing with proper span instrumentation
-- Traces must have inputs and outputs set on the root span (automatically handled by MLflow autologging)
-- Data passed to judges must be JSON-serializable
-
-## Platform Availability
-
-Predefined scorers are available across different MLflow platforms with varying levels of functionality:
+MLflow 3.0 moved LLM evaluation to `mlflow.genai.evaluate()` with a unified scorer framework. However, the sophisticated LLM judge implementations require different infrastructure depending on your platform.
 
 <Tabs>
-<TabItem value="platform_overview" label="Platform Overview" default>
+<TabItem value="databricks" label="Databricks MLflow" default>
 
-### MLflow Open Source vs Databricks MLflow
+### Full LLM Judge Capabilities
 
-**MLflow Open Source**:
-- Heuristic-based metrics (exact match, ROUGE, BLEU, readability scores)
-- Performance metrics (latency, token count)
-- Custom scorer framework for business-specific logic
-- Model type defaults for common evaluation scenarios
+Databricks MLflow provides complete LLM judge infrastructure with the Databricks agents framework, enabling sophisticated semantic evaluation across all quality dimensions.
 
-**Databricks MLflow** (includes all OSS features plus):
-- Advanced LLM-based judge scorers for semantic evaluation
-- RAG-specific evaluation judges (retrieval relevance, groundedness, sufficiency)
-- Built-in safety and correctness assessment
-- Custom LLM judge creation with prompt templates and examples
+The platform includes comprehensive predefined scorers for general quality assessment like Safety, RelevanceToQuery, and Correctness. RAG applications benefit from specialized scorers including RetrievalRelevance, RetrievalSufficiency, and RetrievalGroundedness. Guidelines-based evaluation supports both global and per-example criteria, while tool evaluation capabilities assess ToolGroundedness and ToolSufficiency where applicable.
 
-### Feature Comparison Matrix
-
-| Feature Category | MLflow OSS | Databricks MLflow |
-|------------------|------------|-------------------|
-| **Heuristic Metrics** | ✅ Full Support | ✅ Full Support |
-| **Performance Metrics** | ✅ Full Support | ✅ Full Support |
-| **LLM-Based Judges** | ❌ Not Available | ✅ Full Support |
-| **RAG Evaluation** | ❌ Limited | ✅ Comprehensive |
-| **Safety Assessment** | ❌ Basic Keywords Only | ✅ Advanced LLM Judges |
-| **Custom Judge Creation** | ✅ Function-Based Only | ✅ LLM Judge Templates |
+Databricks MLflow excels with advanced LLM-powered semantic evaluation that goes beyond simple heuristics. Production monitoring automatically applies scorers to live traffic, while enterprise features provide managed datasets and team collaboration. The platform's specialized RAG evaluation capabilities and built-in safety assessment make it ideal for comprehensive quality assurance.
 
 </TabItem>
-<TabItem value="migration_path" label="Migration Considerations">
+<TabItem value="oss" label="MLflow OSS">
 
-### Moving Between Platforms
+### Framework Available, Limited LLM Judge Implementation
 
-**From OSS to Databricks**:
-- Replace heuristic custom scorers with semantic LLM judges
-- Leverage specialized RAG evaluation capabilities
-- Use built-in safety and correctness assessment instead of custom implementations
-- Maintain existing heuristic metrics for fast baseline evaluation
+MLflow OSS includes the complete scorer framework and class definitions, but the sophisticated LLM judge implementations require the Databricks agents framework through the `@requires_databricks_agents` decorator.
 
-**Hybrid Approach**:
-Many teams use both platforms together:
-- OSS for development and testing with fast heuristic metrics
-- Databricks for production monitoring with comprehensive LLM judges
-- Shared evaluation datasets and criteria across platforms
+OSS provides the complete scorer framework and base classes, along with reliable heuristic-based evaluation metrics. The custom scorer development framework using the `@scorer` decorator works fully in OSS, as do model type defaults with traditional metrics and basic evaluation harness functionality.
+
+However, advanced LLM judge implementations like Safety and Correctness require Databricks infrastructure. RAG-specific semantic evaluation, production monitoring services, and sophisticated guidelines-based evaluation all depend on the Databricks agents framework.
+
+For OSS users, the recommended approach focuses on heuristic metrics and custom scorer development rather than attempting to use predefined LLM judges without proper infrastructure support.
 
 </TabItem>
 </Tabs>
 
-## Available Predefined Scorers
+## MLflow OSS Evaluation Strategy
 
-### MLflow Open Source Scorers
+Since sophisticated predefined scorers require Databricks infrastructure, OSS users should focus on proven alternatives that work reliably without external dependencies.
 
-<Tabs>
-<TabItem value="oss_heuristic" label="Heuristic Metrics" default>
+### Heuristic-Based Evaluation
 
-#### Text Comparison Metrics
+Traditional metrics provide reliable evaluation in OSS environments without external service dependencies:
 
-**Exact Match**
-- **Purpose**: Determines if model output exactly matches expected response
-- **Use Cases**: Fact verification, specific answer validation, regression testing
-- **Requirements**: Ground truth/expected response in evaluation data
-- **Limitations**: Very strict - no tolerance for paraphrasing or equivalent answers
-
-**ROUGE Score** 
-- **Purpose**: Measures overlap between generated and reference text using n-gram matching
-- **Use Cases**: Summarization quality, content coverage assessment
-- **Requirements**: Reference text for comparison
-- **Variations**: ROUGE-L (longest common subsequence), ROUGE-N (n-gram overlap)
-
-**BLEU Score**
-- **Purpose**: Evaluates translation quality using modified n-gram precision
-- **Use Cases**: Translation tasks, text generation evaluation
-- **Requirements**: Reference translations or target text
-- **Limitations**: Better suited for translation than general text generation
-
-#### Readability Metrics
-
-**Flesch-Kincaid Grade Level**
-- **Purpose**: Estimates reading difficulty based on sentence length and syllable count
-- **Use Cases**: Content accessibility, audience appropriateness
-- **Output**: Grade level (e.g., 8.5 = 8th grade reading level)
-- **Considerations**: May not reflect actual comprehension difficulty for domain-specific content
-
-**ARI Grade Level** (Automated Readability Index)
-- **Purpose**: Alternative readability measure using character count instead of syllables
-- **Use Cases**: Technical documentation assessment, content complexity evaluation
-- **Advantages**: More reliable for texts with technical terminology
-
-</TabItem>
-<TabItem value="oss_performance" label="Performance Metrics">
-
-#### Operational Metrics
-
-**Latency**
-- **Purpose**: Measures response time from request to completion
-- **Use Cases**: Performance optimization, SLA monitoring, user experience assessment
-- **Output**: Time in milliseconds
-- **Considerations**: Includes network overhead in distributed deployments
-
-**Token Count**
-- **Purpose**: Tracks input and output token usage
-- **Use Cases**: Cost monitoring, prompt optimization, model efficiency assessment
-- **Variations**: Input tokens, output tokens, total tokens
-- **Applications**: Essential for API cost management and prompt engineering
-
-#### Custom Function Framework
-
-**@scorer Decorator**
-- **Purpose**: Enables creation of custom heuristic evaluation logic
-- **Use Cases**: Business-specific rules, domain expertise encoding, deterministic quality checks
-- **Requirements**: Python function returning numerical or boolean scores
-- **Advantages**: Fast execution, predictable behavior, easy debugging
-
-</TabItem>
-<TabItem value="oss_model_types" label="Model Type Defaults">
-
-#### Predefined Evaluation Suites
-
-**Question-Answering** (`model_type="question-answering"`)
-- **Included Metrics**: Exact match, toxicity detection, readability assessment
-- **Use Cases**: Q&A systems, knowledge base applications, chatbots
-- **Assumptions**: Single correct answer per question
-
-**Text Summarization** (`model_type="text-summarization"`)  
-- **Included Metrics**: ROUGE scores, toxicity detection, readability assessment
-- **Use Cases**: Document summarization, news briefing, content condensation
-- **Focus**: Content preservation and conciseness
-
-**General Text** (`model_type="text"`)
-- **Included Metrics**: Toxicity detection, readability assessment
-- **Use Cases**: Content generation, creative writing, general language tasks
-- **Coverage**: Basic quality and safety checks
-
-**Retrievers** (`model_type="retriever"`)
-- **Included Metrics**: Precision@k, Recall@k, NDCG@k
-- **Use Cases**: Search systems, document retrieval, recommendation engines
-- **Focus**: Ranking quality and relevance assessment
-
-</TabItem>
-</Tabs>
-
-### Databricks MLflow Scorers
-
-<Tabs>
-<TabItem value="databricks_semantic" label="Semantic Quality Judges" default>
-
-#### Response Quality Assessment
-
-**RelevanceToQuery** (Databricks Only)
-- **Purpose**: Evaluates if response directly addresses the user's question
-- **How it Works**: LLM judge analyzes query-response alignment
-- **Requirements**: User query and model response
-- **Output**: Boolean relevance score with detailed rationale
-- **Use Cases**: Q&A systems, chatbots, information retrieval applications
-
-**Safety** (Databricks Only)
-- **Purpose**: Detects harmful, offensive, or toxic content in responses
-- **How it Works**: Advanced LLM-based content analysis beyond keyword filtering
-- **Requirements**: Model response text
-- **Coverage**: Hate speech, violence, self-harm, sexual content, dangerous activities
-- **Advantages**: Context-aware evaluation, cultural sensitivity
-
-**Correctness** (Databricks Only)
-- **Purpose**: Assesses factual accuracy against known correct information
-- **How it Works**: Compares response content with expected facts or reference answers
-- **Requirements**: Expected facts or reference response in evaluation data
-- **Input Formats**: List of expected facts OR complete expected response
-- **Applications**: Educational content, factual Q&A, knowledge verification
-
-</TabItem>
-<TabItem value="databricks_rag" label="RAG-Specific Evaluation">
-
-#### Retrieval Quality Assessment
-
-**RetrievalRelevance** (Databricks Only)
-- **Purpose**: Evaluates whether each retrieved document chunk is relevant to the query
-- **How it Works**: LLM judge analyzes query-chunk relevance for each retrieved item
-- **Requirements**: Trace with RETRIEVER spans containing retrieved documents
-- **Output**: Individual relevance scores per chunk + aggregate relevance score
-- **Applications**: Search quality optimization, retrieval system tuning
-
-**RetrievalSufficiency** (Databricks Only)
-- **Purpose**: Determines if retrieved documents provide enough information for the expected response
-- **How it Works**: Compares retrieved context against expected response requirements
-- **Requirements**: RETRIEVER spans + expected facts or expected response
-- **Use Cases**: Retrieval system optimization, knowledge base coverage assessment
-- **Focus**: Information completeness rather than individual document relevance
-
-#### Response Grounding Assessment  
-
-**RetrievalGroundedness** (Databricks Only)
-- **Purpose**: Verifies that model responses are supported by retrieved context
-- **How it Works**: LLM judge checks if response claims are substantiated by provided documents
-- **Requirements**: RETRIEVER spans with retrieved context + model response
-- **Applications**: Factual accuracy verification, hallucination detection in RAG systems
-- **Output**: Boolean groundedness score per retriever span
-
-**ToolGroundedness** (Databricks Only)
-- **Purpose**: Ensures responses are supported by tool call results
-- **How it Works**: Analyzes alignment between tool outputs and response content
-- **Requirements**: CHAT_MODEL spans with OpenAI-format tool calls
-- **Compatibility**: Works automatically with LangChain/LangGraph and OpenAI autologging
-- **Use Cases**: Function calling applications, API integration validation
-
-</TabItem>
-<TabItem value="databricks_guidelines" label="Guidelines and Custom Evaluation">
-
-#### Flexible Evaluation Framework
-
-**GuidelineAdherence** (Databricks Only)
-- **Purpose**: Evaluates responses against custom business rules and requirements
-- **How it Works**: LLM judge applies natural language guidelines to assess compliance
-- **Modes**: Global guidelines (same for all examples) OR per-example guidelines
-- **Input Formats**: String guidelines, list of guidelines, or structured guideline dictionaries
-- **Applications**: Brand voice compliance, regulatory requirements, style guide adherence
-
-**Custom LLM Judge Creation** (Databricks Only)
-- **Purpose**: Build domain-specific evaluation judges with custom prompts
-- **How it Works**: Define evaluation criteria, output categories, and examples
-- **Components**: Custom prompt templates, example-based training, flexible output formats
-- **Advantages**: Domain expertise encoding, stakeholder-aligned evaluation criteria
-- **Use Cases**: Industry-specific quality assessment, complex multi-dimensional evaluation
-
-#### Advanced Tool Assessment
-
-**ToolSufficiency** (Databricks Only)
-- **Purpose**: Evaluates whether tool call results provide adequate information for expected response
-- **How it Works**: Compares tool outputs against response requirements
-- **Requirements**: Tool-calling traces + expected facts or expected response
-- **Applications**: API integration testing, function calling optimization
-- **Focus**: Information adequacy from external tool sources
-
-</TabItem>
-</Tabs>
-
-## Choosing the Right Scorers
-
-### Selection Framework
-
-**Start with Your Platform Capabilities**:
-- **MLflow OSS**: Focus on heuristic metrics and custom function scorers
-- **Databricks MLflow**: Leverage LLM judges for semantic evaluation
-
-**Consider Your Application Type**:
-- **RAG Applications**: Use retrieval-specific scorers (Databricks) or custom retrieval logic (OSS)
-- **Q&A Systems**: Combine relevance, correctness, and safety assessment
-- **Content Generation**: Focus on creativity, safety, and brand compliance evaluation
-- **Tool-Calling Apps**: Use tool groundedness and sufficiency assessment (Databricks)
-
-**Balance Speed vs. Sophistication**:
-- **Fast Iteration**: Start with heuristic metrics for rapid feedback
-- **Production Quality**: Add LLM judges for comprehensive assessment
-- **Cost Optimization**: Use sampling strategies with expensive LLM evaluation
-
-### Best Practice Combinations
-
-**MLflow OSS Recommended Suite**:
 ```python
-# Fast, cost-effective evaluation
-evaluation_suite = [
-    exact_match(),              # Baseline accuracy
-    latency(),                  # Performance monitoring  
-    custom_business_logic,      # Domain-specific requirements
-    safety_keyword_filter,      # Basic safety checking
-    readability_assessment,     # Content accessibility
+import mlflow
+from mlflow.metrics import exact_match, rouge_score, flesch_kincaid_grade_level
+
+# Traditional metrics that work well in OSS
+oss_metrics = [
+    exact_match(),
+    rouge_score(),
+    flesch_kincaid_grade_level(),
+    mlflow.metrics.latency(),
 ]
+
+results = mlflow.genai.evaluate(data=eval_data, extra_metrics=oss_metrics)
 ```
 
-**Databricks MLflow Comprehensive Suite**:
+### Model Type Defaults
+
+OSS includes pre-configured metric suites for common scenarios that work without external dependencies:
+
 ```python
-# Comprehensive semantic evaluation
-evaluation_suite = [
-    exact_match(),              # Baseline comparison
-    RelevanceToQuery(),         # Semantic relevance
-    Safety(),                   # Advanced safety assessment
-    RetrievalGroundedness(),    # RAG quality (if applicable)
-    GuidelineAdherence(),       # Business rule compliance
-    custom_domain_judge,        # Specialized evaluation
-]
+# Pre-configured metric suites for common scenarios
+results = mlflow.genai.evaluate(
+    model=your_model,
+    data=eval_data,
+    targets="ground_truth",
+    model_type="question-answering",  # Uses exact_match, toxicity, readability
+)
 ```
 
-## Integration Patterns
+The "question-answering" model type includes exact match scoring, toxicity detection, and readability assessment. Text summarization applications can use "text-summarization" for ROUGE scores plus safety metrics, while general text generation benefits from "text" model type defaults.
 
-### Development Workflow Integration
+### Custom Scorer Development
 
-**Tier-Based Evaluation**: Use different scorer combinations for different development stages:
-- **Development**: Fast heuristic metrics for immediate feedback
-- **Testing**: Comprehensive evaluation with LLM judges
-- **Production**: Balanced approach with sampling for cost management
+OSS excels at custom scorer development, allowing you to encode domain-specific evaluation logic:
 
-**Version Comparison**: Use consistent scorer sets across application versions to track improvement trends and identify regressions.
+```python
+from mlflow.genai.scorers import scorer
 
-### Production Monitoring Integration
 
-**Sampling Strategies**: Balance evaluation coverage with computational costs:
-- **Critical scorers**: Higher sampling rates (50-100%)
-- **Comprehensive scorers**: Moderate sampling rates (10-20%)  
-- **Experimental scorers**: Lower sampling rates (1-5%)
+@scorer
+def response_length_check(outputs) -> bool:
+    """Custom business logic that works reliably in OSS"""
+    return 50 <= len(outputs) <= 500
 
-**Alert Configuration**: Set thresholds based on scorer characteristics:
-- **Heuristic metrics**: Tight thresholds for consistent behavior
-- **LLM judges**: Looser thresholds accounting for model variability
 
-## Related Concepts
+@scorer
+def keyword_presence(outputs, expectations) -> float:
+    """Domain-specific evaluation logic"""
+    required_keywords = expectations.get("required_keywords", [])
+    present_keywords = sum(1 for kw in required_keywords if kw in outputs.lower())
+    return present_keywords / len(required_keywords) if required_keywords else 1.0
 
-- **[Custom Scorers](/genai/eval-monitor/custom-scorers)**: Build your own evaluation logic when predefined scorers don't meet your needs
-- **[Guidelines-Based Judges](/genai/eval-monitor/custom-judge/meets-guidelines)**: Create rule-based evaluation criteria in natural language
-- **[Prompt-Based Judges](/genai/eval-monitor/custom-judge/create-prompt-judge)**: Design sophisticated custom evaluation with full prompt control
-- **[Production Monitoring](/genai/eval-monitor/production-monitoring)**: Deploy predefined scorers for continuous quality assessment
+
+# Use custom scorers alongside heuristic metrics
+results = mlflow.genai.evaluate(
+    data=eval_data,
+    scorers=[response_length_check, keyword_presence],
+    extra_metrics=[exact_match(), latency()],
+)
+```
+
+Custom scorers enable you to encode business rules, domain expertise, and application-specific quality criteria directly into your evaluation pipeline. This approach often provides more relevant assessment than generic metrics for specialized applications.
+
+## Databricks MLflow Capabilities
+
+Databricks MLflow provides the complete predefined scorer ecosystem with full LLM judge implementations that enable sophisticated semantic evaluation.
+
+### Safety Evaluation
+
+The safety scorer performs advanced content analysis that goes far beyond simple keyword filtering:
+
+```python
+from mlflow.genai.scorers import safety
+
+# Advanced content safety analysis
+feedback = safety(outputs="The capital of France is Paris.")
+# Returns comprehensive safety assessment with rationale
+```
+
+This scorer analyzes content for various harmful categories including hate speech, violence, self-harm, and inappropriate content, providing detailed rationales for its assessments.
+
+### Semantic Quality Assessment
+
+Semantic evaluation assesses meaning and relevance rather than just surface-level text characteristics:
+
+```python
+from mlflow.genai.scorers import relevance_to_query, correctness
+
+relevance_feedback = relevance_to_query(
+    inputs={"question": "What is the capital of France?"},
+    outputs="The capital of France is Paris.",
+)
+
+correctness_feedback = correctness(
+    inputs={"question": "What is the capital of France?"},
+    outputs="The capital of France is Paris.",
+    expectations={"expected_response": "Paris is the capital of France"},
+)
+```
+
+These scorers understand context and meaning, enabling them to assess whether responses actually answer questions and contain factually accurate information.
+
+### RAG-Specific Evaluation
+
+Retrieval-Augmented Generation applications have unique evaluation needs that these specialized scorers address:
+
+```python
+from mlflow.genai.scorers import (
+    retrieval_relevance,
+    retrieval_groundedness,
+    retrieval_sufficiency,
+)
+
+# Requires traces with RETRIEVER spans
+trace = mlflow.get_trace("your-trace-id")
+
+# Evaluate retrieval quality
+relevance_feedback = retrieval_relevance(trace=trace)
+groundedness_feedback = retrieval_groundedness(trace=trace)
+sufficiency_feedback = retrieval_sufficiency(
+    trace=trace, expectations={"expected_facts": ["Paris", "France", "capital"]}
+)
+```
+
+RetrievalRelevance assesses whether retrieved documents actually relate to the user's query. RetrievalGroundedness verifies that the model's response is supported by the retrieved context rather than hallucinated. RetrievalSufficiency determines whether the retrieved information provides enough detail to answer the question properly.
+
+### Guidelines-Based Evaluation
+
+Guidelines-based evaluation enables assessment against business rules and brand requirements:
+
+```python
+from mlflow.genai.scorers import guideline_adherence
+
+# Global guidelines for consistent evaluation
+brand_voice = guideline_adherence.with_config(
+    name="brand_compliance",
+    global_guidelines=[
+        "Maintain professional tone",
+        "Be helpful and accurate",
+        "Avoid controversial topics",
+    ],
+)
+
+feedback = brand_voice(outputs="The capital of France is Paris.")
+```
+
+This approach allows you to define evaluation criteria in natural language that LLM judges can apply consistently across your evaluation dataset.
+
+## Development Strategy Recommendations
+
+### OSS-Focused Development
+
+OSS users can build effective evaluation pipelines by emphasizing reliable metrics and custom logic:
+
+```python
+# Start with reliable OSS evaluation for rapid iteration
+development_evaluation = [
+    exact_match(),
+    response_length_check,  # Custom scorer
+    latency(),
+]
+
+# Fast feedback loop during development
+results = mlflow.genai.evaluate(data=dev_dataset, scorers=development_evaluation)
+```
+
+This approach provides immediate feedback during development without external service dependencies or costs.
+
+### Databricks Production Evaluation
+
+Databricks enables comprehensive quality assessment for production deployment:
+
+```python
+# Comprehensive evaluation for production readiness
+production_evaluation = [
+    safety,
+    relevance_to_query,
+    correctness,
+    retrieval_groundedness,  # If using RAG
+    brand_voice,  # Custom guidelines
+]
+
+# Thorough assessment before deployment
+results = mlflow.genai.evaluate(data=production_dataset, scorers=production_evaluation)
+```
+
+The sophisticated semantic evaluation capabilities help ensure applications meet high quality standards before reaching users.
+
+### Hybrid Development Strategy
+
+Many teams successfully combine both platforms to optimize for different development phases. OSS works well for rapid iteration with heuristic metrics and custom scorers during initial development. Databricks provides comprehensive LLM evaluation and monitoring for production readiness assessment. Teams maintain shared standards through consistent evaluation datasets and quality criteria, enabling gradual migration from OSS development to Databricks production deployment.
+
+## Platform Selection Guidelines
+
+### MLflow OSS Advantages
+
+OSS makes sense when working with limited evaluation budgets or needing fast development iteration cycles. Teams with strong domain expertise can build highly effective custom scorer frameworks. The platform excels for heuristic and performance metrics while supporting internal evaluation framework development.
+
+### Databricks MLflow Advantages
+
+Databricks becomes valuable when you need sophisticated semantic evaluation or RAG-specific assessment capabilities. The platform's production monitoring with automated evaluation reduces operational overhead. Enterprise features support team collaboration and governance requirements. Customer-facing AI applications particularly benefit from comprehensive quality assurance capabilities.
+
+## Framework Compatibility
+
+The unified scorer framework ensures smooth transitions between platforms:
+
+```python
+# This pattern works on both platforms
+from mlflow.genai.scorers import scorer
+
+
+@scorer
+def domain_specific_quality(outputs, expectations) -> float:
+    """Custom evaluation logic that works everywhere"""
+    # Your domain-specific evaluation logic
+    return quality_score
+
+
+# Framework handles execution regardless of platform
+results = mlflow.genai.evaluate(data=eval_data, scorers=[domain_specific_quality])
+```
+
+The consistent API across platforms enables easy migration paths from OSS to Databricks. Teams can share evaluation datasets and criteria while maintaining common development patterns and best practices.
+
+## Getting Started Path
+
+### For OSS Users
+
+Begin with heuristic metrics to establish immediate evaluation capability. These provide reliable baselines without external dependencies. Develop custom scorers that encode your domain-specific requirements and business logic. Leverage model type defaults for common use cases like question-answering or text summarization. Focus evaluation efforts on performance metrics and business logic assessment where you have the most control and expertise.
+
+### For Databricks Users
+
+Start with predefined scorers to quickly establish comprehensive evaluation coverage. Add custom guidelines that reflect your brand voice and business requirements. Implement RAG evaluation if your application uses retrieval-augmented generation patterns. Set up production monitoring for continuous quality assessment without manual intervention.
+
+### Migration Strategy
+
+Establish evaluation datasets and quality criteria while using OSS for initial development. Develop custom evaluation logic using the scorer framework to capture domain-specific requirements. Validate approaches with heuristic metrics to ensure baseline quality. When ready for advanced semantic evaluation, migrate to Databricks while maintaining your existing evaluation datasets and custom scorers.
 
 ## Summary
 
-Predefined LLM judge scorers provide powerful building blocks for GenAI evaluation, with different capabilities depending on your platform:
+MLflow 3.0 provides a unified evaluation framework with different implementation capabilities depending on your platform choice. The scorer architecture and evaluation harness work consistently across platforms, enabling shared development patterns and easy migration paths.
 
-**MLflow OSS** offers fast, reliable heuristic evaluation perfect for development cycles and cost-conscious production monitoring. Custom scorer frameworks enable business-specific evaluation logic.
+Implementation differences become apparent in the sophistication of available evaluation methods. While OSS provides the framework foundation and excels at heuristic evaluation, Databricks offers complete LLM judge implementations with advanced semantic evaluation capabilities.
 
-**Databricks MLflow** adds sophisticated LLM-based semantic evaluation, specialized RAG assessment, and flexible custom judge creation for comprehensive quality assurance.
+Your strategic approach should consider evaluation sophistication needs, budget constraints, and development velocity requirements. The unified framework design enables teams to start with OSS and migrate to Databricks as evaluation needs become more sophisticated, maintaining continuity in evaluation datasets and custom scoring logic.
 
-**Key Selection Factors**:
-- Choose scorers that match your application architecture and trace structure
-- Balance evaluation sophistication with computational costs
-- Combine complementary scorer types for comprehensive quality coverage
-- Consider platform-specific capabilities when planning your evaluation strategy
+Understanding these platform distinctions helps you choose the right evaluation strategy for your GenAI application development and deployment needs, whether you prioritize cost-effectiveness and customization or comprehensive semantic evaluation and production monitoring.
 
-Understanding these concepts helps you select the right combination of predefined scorers to meet your quality assurance needs while optimizing for speed, cost, and evaluation comprehensiveness.
+## Next Steps
+
+- **[Custom Scorers](/genai/eval-monitor/custom-scorers)**: Build domain-specific evaluation logic that works across platforms
+- **[Evaluation Harness](/genai/eval-monitor/concepts/eval-harness)**: Learn the evaluation workflow and API patterns
+- **[Production Monitoring](/genai/eval-monitor/concepts/production-monitoring)**: Implement continuous quality assessment (Databricks)
