--- a/docs/docs/genai/eval-monitor/concepts/evaluation-runs.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/evaluation-runs.mdx
@@ -108,24 +108,36 @@ Each trace within an evaluation run contains complete information about a single
     "trace_id": "trace_abc123",
     "inputs": {
         "question": "How do I optimize MLflow experiment tracking?",
-        "user_context": {"experience_level": "intermediate", "domain": "ml_engineering"}
+        "user_context": {
+            "experience_level": "intermediate",
+            "domain": "ml_engineering",
+        },
     },
     "outputs": {
         "response": "To optimize MLflow experiment tracking, focus on...",
         "confidence": 0.92,
-        "sources_used": ["mlflow_docs", "best_practices_guide"]
+        "sources_used": ["mlflow_docs", "best_practices_guide"],
     },
     "execution_metadata": {
         "duration_ms": 1850,
         "tokens_used": 245,
         "retrieval_count": 3,
-        "generation_attempts": 1
+        "generation_attempts": 1,
     },
     "assessments": {
-        "correctness": {"score": 0.88, "rationale": "Provides accurate optimization strategies"},
-        "relevance": {"score": 0.95, "rationale": "Directly addresses the user's question"},
-        "completeness": {"score": 0.82, "rationale": "Covers main points but could include more examples"}
-    }
+        "correctness": {
+            "score": 0.88,
+            "rationale": "Provides accurate optimization strategies",
+        },
+        "relevance": {
+            "score": 0.95,
+            "rationale": "Directly addresses the user's question",
+        },
+        "completeness": {
+            "score": 0.82,
+            "rationale": "Covers main points but could include more examples",
+        },
+    },
 }
 ```
 
@@ -149,7 +161,7 @@ results = mlflow.evaluate(
     data=test_dataset,
     model=my_application,
     extra_metrics=[RelevanceToQuery(), Safety()],
-    model_id="models:/my-chatbot/staging"  # Links to specific model version
+    model_id="models:/my-chatbot/staging",  # Links to specific model version
 )
 
 # Access the created run
@@ -173,7 +185,7 @@ mlflow.evaluate(
     data=focused_test_set,
     model=development_version,
     extra_metrics=basic_scorers,
-    experiment_name="chatbot/development_testing"
+    experiment_name="chatbot/development_testing",
 )
 ```
 
@@ -184,7 +196,7 @@ mlflow.evaluate(
     data=comprehensive_test_suite,
     model=staging_candidate,
     extra_metrics=full_scorer_suite,
-    experiment_name="chatbot/pre_production_validation"
+    experiment_name="chatbot/pre_production_validation",
 )
 ```
 
@@ -195,7 +207,7 @@ mlflow.evaluate(
     data=comparison_dataset,
     model=experimental_approach,
     extra_metrics=comparison_scorers,
-    experiment_name="chatbot/feature_comparisons"
+    experiment_name="chatbot/feature_comparisons",
 )
 ```
 
@@ -206,7 +218,7 @@ mlflow.evaluate(
     data=regression_test_suite,
     model=updated_version,
     extra_metrics=stability_scorers,
-    experiment_name="chatbot/regression_testing"
+    experiment_name="chatbot/regression_testing",
 )
 ```
 
@@ -220,10 +232,10 @@ mlflow.evaluate(
 # Track all relevant versions for reproducibility
 evaluation_params = {
     "app_version": "v2.1.3",
-    "dataset_version": "customer_qa_v2.1", 
+    "dataset_version": "customer_qa_v2.1",
     "prompt_template_version": "technical_support_v4",
     "model_checkpoint": "checkpoint_2024_03_15",
-    "scorer_config_version": "production_v1.2"
+    "scorer_config_version": "production_v1.2",
 }
 
 evaluation_tags = {
@@ -231,7 +243,7 @@ evaluation_tags = {
     "deployment_target": "staging",
     "team": "ml_engineering",
     "project": "customer_support_optimization",
-    "milestone": "q1_2024_release"
+    "milestone": "q1_2024_release",
 }
 
 results = mlflow.evaluate(
@@ -258,16 +270,18 @@ business_context = {
     "performance_target": "95%_quality_threshold",
     "compliance_requirement": "data_privacy_v2",
     "user_feedback_integration": "enabled",
-    "cost_optimization_mode": "balanced"
+    "cost_optimization_mode": "balanced",
 }
 
 # Include business context for decision-making
-evaluation_tags.update({
-    "business_objective": "improve_customer_satisfaction",
-    "success_criteria": "quality_and_latency_improvement",
-    "stakeholder": "product_team",
-    "review_required": "true"
-})
+evaluation_tags.update(
+    {
+        "business_objective": "improve_customer_satisfaction",
+        "success_criteria": "quality_and_latency_improvement",
+        "stakeholder": "product_team",
+        "review_required": "true",
+    }
+)
 ```
 
 </TabItem>
@@ -287,9 +301,7 @@ Understanding how to effectively access and analyze evaluation run data enables 
 ```python
 # Immediate access to evaluation results
 results = mlflow.evaluate(
-    data=test_dataset,
-    model=my_application,
-    extra_metrics=quality_scorers
+    data=test_dataset, model=my_application, extra_metrics=quality_scorers
 )
 
 # Aggregate metrics analysis
@@ -314,6 +326,7 @@ if len(low_quality) > 0:
 
 # Quality distribution analysis
 import numpy as np
+
 scores = eval_table["overall_score"].dropna()
 print(f"\nQuality Distribution:")
 print(f"  Mean: {np.mean(scores):.3f}")
@@ -331,50 +344,57 @@ print(f"  Standard deviation: {np.std(scores):.3f}")
 # Retrieve historical evaluation runs
 def analyze_quality_trends(experiment_name: str, days_back: int = 30):
     """Analyze quality trends across recent evaluation runs."""
-    
+
     # Find recent evaluation runs
     runs_df = mlflow.search_runs(
-        experiment_names=[experiment_name],
-        max_results=50,
-        order_by=["start_time DESC"]
+        experiment_names=[experiment_name], max_results=50, order_by=["start_time DESC"]
     )
-    
+
     # Filter to recent runs with quality metrics
     recent_runs = runs_df[
-        (runs_df["start_time"] > pd.Timestamp.now() - pd.Timedelta(days=days_back)) &
-        (runs_df["metrics.overall_score"].notna())
+        (runs_df["start_time"] > pd.Timestamp.now() - pd.Timedelta(days=days_back))
+        & (runs_df["metrics.overall_score"].notna())
     ].copy()
-    
+
     # Analyze trends
     print(f"=== Quality Trends (Last {days_back} days) ===")
     print(f"Total evaluation runs: {len(recent_runs)}")
-    
+
     if len(recent_runs) > 1:
         # Overall quality trend
         quality_scores = recent_runs["metrics.overall_score"]
-        trend_direction = "📈 Improving" if quality_scores.iloc[0] > quality_scores.iloc[-1] else "📉 Declining"
+        trend_direction = (
+            "📈 Improving"
+            if quality_scores.iloc[0] > quality_scores.iloc[-1]
+            else "📉 Declining"
+        )
         print(f"Quality trend: {trend_direction}")
         print(f"Latest score: {quality_scores.iloc[0]:.3f}")
         print(f"Best score: {quality_scores.max():.3f}")
         print(f"Worst score: {quality_scores.min():.3f}")
-        
+
         # Version comparison
         if "params.app_version" in recent_runs.columns:
-            version_performance = recent_runs.groupby("params.app_version")["metrics.overall_score"].agg(['mean', 'count']).round(3)
+            version_performance = (
+                recent_runs.groupby("params.app_version")["metrics.overall_score"]
+                .agg(["mean", "count"])
+                .round(3)
+            )
             print(f"\nPerformance by version:")
             print(version_performance)
-    
+
     return recent_runs
+
 
 # Compare specific versions
 def compare_application_versions(version_a: str, version_b: str, experiment_name: str):
     """Compare evaluation results between two application versions."""
-    
+
     runs_df = mlflow.search_runs(
         experiment_names=[experiment_name],
-        filter_string=f"params.app_version IN ('{version_a}', '{version_b}')"
+        filter_string=f"params.app_version IN ('{version_a}', '{version_b}')",
     )
-    
+
     comparison_results = {}
     for version in [version_a, version_b]:
         version_runs = runs_df[runs_df["params.app_version"] == version]
@@ -387,26 +407,31 @@ def compare_application_versions(version_a: str, version_b: str, experiment_name
                 "relevance": latest_run.get("metrics.relevance/mean", 0),
                 "safety": latest_run.get("metrics.safety/pass_rate", 0),
                 "run_id": latest_run["run_id"],
-                "evaluation_date": latest_run["start_time"]
+                "evaluation_date": latest_run["start_time"],
             }
-    
+
     # Display comparison
     print(f"=== Version Comparison: {version_a} vs {version_b} ===")
     for metric in ["overall_score", "correctness", "relevance", "safety"]:
         a_score = comparison_results.get(version_a, {}).get(metric, 0)
         b_score = comparison_results.get(version_b, {}).get(metric, 0)
         improvement = b_score - a_score
-        
+
         print(f"{metric}:")
         print(f"  {version_a}: {a_score:.3f}")
         print(f"  {version_b}: {b_score:.3f}")
-        print(f"  Change: {improvement:+.3f} ({'🚀' if improvement > 0 else '⚠️' if improvement < 0 else '➡️'})")
-    
+        print(
+            f"  Change: {improvement:+.3f} ({'🚀' if improvement > 0 else '⚠️' if improvement < 0 else '➡️'})"
+        )
+
     return comparison_results
+
 
 # Usage examples
 quality_trends = analyze_quality_trends("chatbot/pre_production_validation")
-version_comparison = compare_application_versions("v2.0", "v2.1", "chatbot/pre_production_validation")
+version_comparison = compare_application_versions(
+    "v2.0", "v2.1", "chatbot/pre_production_validation"
+)
 ```
 
 </TabItem>
@@ -445,7 +470,7 @@ mlflow.evaluate(
     data=test_dataset,
     model=my_application,
     extra_metrics=quality_scorers,
-    model_id="models:/customer-chatbot/staging"  # Links to specific model version
+    model_id="models:/customer-chatbot/staging",  # Links to specific model version
 )
 
 # Method 2: Using version parameters and tags
@@ -454,14 +479,12 @@ with mlflow.start_run() as run:
     mlflow.log_param("app_version", "v2.1.3")
     mlflow.log_param("model_checkpoint", "checkpoint_2024_03_15")
     mlflow.log_param("deployment_target", "production")
-    
+
     # Run evaluation within the run context
     results = mlflow.evaluate(
-        data=test_dataset,
-        model=my_application,
-        extra_metrics=quality_scorers
+        data=test_dataset, model=my_application, extra_metrics=quality_scorers
     )
-    
+
     # Log additional deployment readiness information
     mlflow.set_tag("deployment_ready", str(results.metrics["overall_score"] > 0.85))
     mlflow.set_tag("quality_gate_passed", str(all_quality_thresholds_met(results)))
@@ -477,54 +500,57 @@ def automated_evaluation_pipeline(
     app_version: str,
     deployment_target: str,
     dataset_name: str,
-    quality_thresholds: dict
+    quality_thresholds: dict,
 ):
     """
     Automated evaluation pipeline with quality gates and notifications.
     """
-    
+
     # Set up evaluation context
     experiment_name = f"automated_evaluation/{deployment_target}"
     mlflow.set_experiment(experiment_name)
-    
+
     try:
         # Load application and dataset
         application = load_application_version(app_version)
         evaluation_dataset = load_evaluation_dataset(dataset_name)
         quality_scorers = get_standard_scorer_suite()
-        
+
         # Run evaluation
         with mlflow.start_run(run_name=f"auto_eval_{app_version}") as run:
             results = mlflow.evaluate(
                 data=evaluation_dataset,
                 model=application,
-                extra_metrics=quality_scorers
+                extra_metrics=quality_scorers,
             )
-            
+
             # Log automation metadata
             mlflow.log_param("automation_trigger", "ci_cd_pipeline")
             mlflow.log_param("evaluation_type", "automated_quality_gate")
             mlflow.set_tag("deployment_target", deployment_target)
-            
+
             # Quality gate evaluation
             quality_passed = evaluate_quality_gates(results.metrics, quality_thresholds)
-            mlflow.set_tag("quality_gate_status", "passed" if quality_passed else "failed")
-            
+            mlflow.set_tag(
+                "quality_gate_status", "passed" if quality_passed else "failed"
+            )
+
             # Generate report
             evaluation_report = generate_evaluation_report(results, quality_thresholds)
             mlflow.log_text(evaluation_report, "evaluation_report.md")
-            
+
             return {
                 "run_id": run.info.run_id,
                 "quality_passed": quality_passed,
                 "metrics": results.metrics,
-                "deployment_recommendation": "proceed" if quality_passed else "block"
+                "deployment_recommendation": "proceed" if quality_passed else "block",
             }
-            
+
     except Exception as e:
         mlflow.log_param("evaluation_status", "failed")
         mlflow.set_tag("error_message", str(e))
         raise
+
 
 def evaluate_quality_gates(metrics: dict, thresholds: dict) -> bool:
     """Evaluate whether quality metrics meet deployment thresholds."""
