--- a/docs/docs/genai/eval-monitor/concepts/judges/is-context-relevant.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/is-context-relevant.mdx
@@ -78,10 +78,11 @@ Relevance judges vary between MLflow Open Source and Databricks MLflow:
 ```python
 from mlflow.genai.judges import is_context_relevant
 
+
 def is_context_relevant(
     *,
-    request: str,               # User's query
-    context: Any,               # Context to evaluate (JSON-serializable)
+    request: str,  # User's query
+    context: Any,  # Context to evaluate (JSON-serializable)
     name: Optional[str] = None  # Optional identifier for MLflow UI
 ) -> mlflow.entities.Feedback:
     """Returns Feedback object indicating 'yes' or 'no' relevance and detailed rationale."""
@@ -94,8 +95,7 @@ from mlflow.genai.judges import is_context_relevant
 
 # Relevant context example
 feedback = is_context_relevant(
-    request="What is the capital of France?",
-    context="Paris is the capital of France."
+    request="What is the capital of France?", context="Paris is the capital of France."
 )
 
 # Outputs:
@@ -105,7 +105,7 @@ feedback = is_context_relevant(
 # Irrelevant context example
 feedback = is_context_relevant(
     request="What is the capital of France?",
-    context="Paris is known for the Eiffel Tower."
+    context="Paris is known for the Eiffel Tower.",
 )
 
 # Outputs:
@@ -127,17 +127,18 @@ from mlflow.genai.scorers import RelevanceToQuery
 # Evaluation dataset
 
 eval_dataset = [
-    {"inputs": {"query": "What is the capital of France?"},
-     "outputs": {"response": "Paris is the capital of France."}},
-    {"inputs": {"query": "What is the capital of France?"},
-     "outputs": {"response": "France has great food."}}
+    {
+        "inputs": {"query": "What is the capital of France?"},
+        "outputs": {"response": "Paris is the capital of France."},
+    },
+    {
+        "inputs": {"query": "What is the capital of France?"},
+        "outputs": {"response": "France has great food."},
+    },
 ]
 
 # Evaluate
-results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    scorers=[RelevanceToQuery()]
-)
+results = mlflow.genai.evaluate(data=eval_dataset, scorers=[RelevanceToQuery()])
 ```
 
 ### 2. `RetrievalRelevance` scorer
@@ -148,14 +149,18 @@ Evaluates relevance of each retrieved document:
 import mlflow
 from mlflow.genai.scorers import RetrievalRelevance
 
+
 @mlflow.trace(span_type="RETRIEVER")
 def retrieve_docs(query):
     # Retrieve relevant documents
+    return
+
 
 @mlflow.trace
 def rag_app(query):
     docs = retrieve_docs(query)
     return {"response": f"Retrieved {len(docs)} documents."}
+
 
 # Evaluation dataset
 
@@ -163,9 +168,7 @@ eval_dataset = [{"inputs": {"query": "What is the capital of France?"}}]
 
 # Evaluate
 results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    predict_fn=rag_app,
-    scorers=[RetrievalRelevance()]
+    data=eval_dataset, predict_fn=rag_app, scorers=[RetrievalRelevance()]
 )
 ```
 
@@ -177,18 +180,16 @@ When the prebuilt scorers do not fit your application structure, wrap the judge 
 from mlflow.genai.judges import is_context_relevant
 from mlflow.genai.scorers import scorer
 
+
 @scorer
 def custom_context_relevance(inputs, outputs):
     context = outputs["retrieved_context"][0]["content"]
-    return is_context_relevant(
-        request=inputs["query"],
-        context=context
-    )
+    return is_context_relevant(request=inputs["query"], context=context)
+
 
 # Evaluate
 results = mlflow.genai.evaluate(
-    data=custom_eval_dataset,
-    scorers=[custom_context_relevance]
+    data=custom_eval_dataset, scorers=[custom_context_relevance]
 )
 ```
 
