--- a/docs/docs/genai/eval-monitor/concepts/judges/is-correct.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/is-correct.mdx
@@ -78,6 +78,7 @@ Differences between MLflow Open Source and Databricks MLflow for correctness eva
 ```python
 from mlflow.genai.judges import is_correct
 
+
 def is_correct(
     *,
     request: str,
@@ -98,7 +99,7 @@ from mlflow.genai.judges import is_correct
 feedback = is_correct(
     request="What is MLflow?",
     response="MLflow is an open-source platform for managing ML lifecycles.",
-    expected_facts=["MLflow is open-source", "MLflow manages ML lifecycles"]
+    expected_facts=["MLflow is open-source", "MLflow manages ML lifecycles"],
 )
 
 # Outputs:
@@ -109,7 +110,7 @@ feedback = is_correct(
 feedback = is_correct(
     request="When was MLflow released?",
     response="MLflow was released in 2017.",
-    expected_facts=["MLflow was released in June 2018"]
+    expected_facts=["MLflow was released in June 2018"],
 )
 
 # Outputs:
@@ -132,16 +133,15 @@ from mlflow.genai.scorers import Correctness
 # Evaluation dataset with ground truth
 
 eval_dataset = [
-    {"inputs": {"query": "Capital of France?"},
-     "outputs": {"response": "Paris is France's capital."},
-     "expectations": {"expected_facts": ["Paris is the capital of France."]}}
+    {
+        "inputs": {"query": "Capital of France?"},
+        "outputs": {"response": "Paris is France's capital."},
+        "expectations": {"expected_facts": ["Paris is the capital of France."]},
+    }
 ]
 
 # Evaluation execution
-results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    scorers=[Correctness()]
-)
+results = mlflow.genai.evaluate(data=eval_dataset, scorers=[Correctness()])
 ```
 
 ## Alternative: Using `expected_response`
@@ -150,15 +150,16 @@ Use `expected_response` as an alternative to `expected_facts`:
 
 ```python
 eval_dataset = [
-    {"inputs": {"query": "What is MLflow?"},
-     "outputs": {"response": "MLflow manages ML lifecycles."},
-     "expectations": {"expected_response": "MLflow is a platform for managing ML lifecycles."}}
+    {
+        "inputs": {"query": "What is MLflow?"},
+        "outputs": {"response": "MLflow manages ML lifecycles."},
+        "expectations": {
+            "expected_response": "MLflow is a platform for managing ML lifecycles."
+        },
+    }
 ]
 
-results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    scorers=[Correctness()]
-)
+results = mlflow.genai.evaluate(data=eval_dataset, scorers=[Correctness()])
 ```
 
 ## Custom Scorer Implementation
@@ -169,19 +170,18 @@ Wrap the judge in custom scorers when needed:
 from mlflow.genai.judges import is_correct
 from mlflow.genai.scorers import scorer
 
+
 @scorer
 def correctness_custom(inputs, outputs, expectations):
     return is_correct(
         request=inputs["question"],
         response=outputs["answer"],
-        expected_facts=expectations["facts"]
+        expected_facts=expectations["facts"],
     )
 
+
 # Evaluate
-results = mlflow.genai.evaluate(
-    data=custom_eval_dataset,
-    scorers=[correctness_custom]
-)
+results = mlflow.genai.evaluate(data=custom_eval_dataset, scorers=[correctness_custom])
 ```
 
 ## Interpreting Results
