--- a/docs/docs/genai/eval-monitor/concepts/judges/is-grounded.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/judges/is-grounded.mdx
@@ -78,12 +78,9 @@ Differences between MLflow Open Source and Databricks MLflow for groundedness ev
 ```python
 from mlflow.genai.judges import is_grounded
 
+
 def is_grounded(
-    *,
-    request: str,
-    response: str,
-    context: Any,
-    name: Optional[str] = None
+    *, request: str, response: str, context: Any, name: Optional[str] = None
 ) -> mlflow.entities.Feedback:
     """Returns Feedback indicating groundedness with detailed rationale."""
 ```
@@ -97,7 +94,7 @@ from mlflow.genai.judges import is_grounded
 feedback = is_grounded(
     request="Capital of France?",
     response="Paris",
-    context=[{"content": "Paris is the capital of France."}]
+    context=[{"content": "Paris is the capital of France."}],
 )
 
 # Outputs:
@@ -108,7 +105,7 @@ feedback = is_grounded(
 feedback = is_grounded(
     request="Capital of France?",
     response="Paris, population 10 million",
-    context=[{"content": "Paris is the capital of France."}]
+    context=[{"content": "Paris is the capital of France."}],
 )
 
 # Outputs:
@@ -128,23 +125,25 @@ Databricks MLflow includes the `RetrievalGroundedness` scorer for automatic grou
 ```python
 from mlflow.genai.scorers import RetrievalGroundedness
 
+
 @mlflow.trace(span_type="RETRIEVER")
 def retrieve_docs(query):
     # Document retrieval logic
+    return
+
 
 @mlflow.trace
 def rag_app(query):
     docs = retrieve_docs(query)
     return {"response": "Generated response based on context."}
 
+
 # Evaluation dataset
 eval_dataset = [{"inputs": {"query": "What is MLflow?"}}]
 
 # Run evaluation
 results = mlflow.genai.evaluate(
-    data=eval_dataset,
-    predict_fn=rag_app,
-    scorers=[RetrievalGroundedness()]
+    data=eval_dataset, predict_fn=rag_app, scorers=[RetrievalGroundedness()]
 )
 ```
 
@@ -156,19 +155,18 @@ For custom data structures, encapsulate the judge within custom scorers:
 from mlflow.genai.judges import is_grounded
 from mlflow.genai.scorers import scorer
 
+
 @scorer
 def custom_groundedness(inputs, outputs):
     return is_grounded(
         request=inputs["query"],
         response=outputs["response"],
-        context=outputs["retrieved_context"]
+        context=outputs["retrieved_context"],
     )
 
+
 # Evaluation execution
-results = mlflow.genai.evaluate(
-    data=custom_eval_dataset,
-    scorers=[custom_groundedness]
-)
+results = mlflow.genai.evaluate(data=custom_eval_dataset, scorers=[custom_groundedness])
 ```
 
 ## Interpreting Results
