--- a/docs/docs/genai/eval-monitor/version-comparison.mdx
+++ b/docs/docs/genai/eval-monitor/version-comparison.mdx
@@ -21,7 +21,7 @@ The foundation of reliable version comparison is consistency. You must evaluate 
 This requires three key components:
 
 1. **Standardized Evaluation Setup**: Same datasets, metrics, and evaluation environment
-2. **Systematic Evaluation Execution**: Running `mlflow.evaluate()` for each version with proper tracking  
+2. **Systematic Evaluation Execution**: Running `mlflow.evaluate()` for each version with proper tracking
 3. **Structured Comparison Analysis**: Using MLflow's UI and APIs to analyze results
 
 ## Setting Up Consistent Evaluation
@@ -38,23 +38,27 @@ import mlflow
 import pandas as pd
 
 # Create a standardized evaluation dataset
-evaluation_data = pd.DataFrame({
-    "inputs": [
-        "What is MLflow and how does it help with ML lifecycle management?",
-        "Explain the difference between Apache Spark and traditional MapReduce.",
-        "How do you handle model versioning in production ML systems?",
-        "What are the key considerations for deploying ML models at scale?"
-    ],
-    "ground_truth": [
-        "MLflow is an open-source platform for managing the end-to-end machine learning lifecycle...",
-        "Apache Spark improves upon MapReduce by providing in-memory processing capabilities...",
-        "Model versioning in production requires systematic tracking of model artifacts...",
-        "Key deployment considerations include scalability, monitoring, and model governance..."
-    ]
-})
+evaluation_data = pd.DataFrame(
+    {
+        "inputs": [
+            "What is MLflow and how does it help with ML lifecycle management?",
+            "Explain the difference between Apache Spark and traditional MapReduce.",
+            "How do you handle model versioning in production ML systems?",
+            "What are the key considerations for deploying ML models at scale?",
+        ],
+        "ground_truth": [
+            "MLflow is an open-source platform for managing the end-to-end machine learning lifecycle...",
+            "Apache Spark improves upon MapReduce by providing in-memory processing capabilities...",
+            "Model versioning in production requires systematic tracking of model artifacts...",
+            "Key deployment considerations include scalability, monitoring, and model governance...",
+        ],
+    }
+)
 
 # Save dataset for consistent reuse
-eval_dataset = mlflow.data.from_pandas(evaluation_data, name="app_eval_dataset", version="v1.0")
+eval_dataset = mlflow.data.from_pandas(
+    evaluation_data, name="app_eval_dataset", version="v1.0"
+)
 print(f"Created evaluation dataset with {len(evaluation_data)} samples")
 ```
 
@@ -65,6 +69,7 @@ print(f"Created evaluation dataset with {len(evaluation_data)} samples")
 from mlflow.metrics import exact_match, flesch_kincaid_grade_level
 from mlflow.metrics.genai import answer_relevance, answer_correctness
 
+
 # Define standardized metrics suite
 def get_standard_metrics():
     """Return the standard metrics suite for version comparison."""
@@ -74,6 +79,7 @@ def get_standard_metrics():
         answer_relevance(model="openai:/gpt-4o-mini"),
         answer_correctness(model="openai:/gpt-4o-mini"),
     ]
+
 
 standard_metrics = get_standard_metrics()
 print(f"Standard metrics suite includes {len(standard_metrics)} metrics")
@@ -95,6 +101,7 @@ Before running evaluations, clearly define what constitutes each "version" of yo
 import openai
 from typing import List
 
+
 def app_v1_basic(inputs_df: pd.DataFrame) -> List[str]:
     """Version 1: Basic prompting approach."""
     predictions = []
@@ -102,17 +109,18 @@ def app_v1_basic(inputs_df: pd.DataFrame) -> List[str]:
         completion = openai.chat.completions.create(
             model="gpt-4o-mini",
             messages=[{"role": "user", "content": row["inputs"]}],
-            temperature=0.1
+            temperature=0.1,
         )
         predictions.append(completion.choices[0].message.content)
     return predictions
 
+
 def app_v2_enhanced(inputs_df: pd.DataFrame) -> List[str]:
     """Version 2: Enhanced with system instructions."""
     predictions = []
-    system_prompt = """You are a knowledgeable technical assistant. Provide accurate, 
+    system_prompt = """You are a knowledgeable technical assistant. Provide accurate,
     well-structured answers with specific examples when relevant."""
-    
+
     for _, row in inputs_df.iterrows():
         completion = openai.chat.completions.create(
             model="gpt-4o-mini",
@@ -120,7 +128,7 @@ def app_v2_enhanced(inputs_df: pd.DataFrame) -> List[str]:
                 {"role": "system", "content": system_prompt},
                 {"role": "user", "content": row["inputs"]},
             ],
-            temperature=0.1
+            temperature=0.1,
         )
         predictions.append(completion.choices[0].message.content)
     return predictions
@@ -134,15 +142,17 @@ def app_gpt4_mini(inputs_df: pd.DataFrame) -> List[str]:
     """Version using GPT-4o-mini."""
     return _generate_responses(inputs_df, "gpt-4o-mini")
 
+
 def app_gpt4(inputs_df: pd.DataFrame) -> List[str]:
     """Version using GPT-4."""
     return _generate_responses(inputs_df, "gpt-4")
+
 
 def _generate_responses(inputs_df: pd.DataFrame, model: str) -> List[str]:
     """Helper function to generate responses with different models."""
     predictions = []
     system_prompt = "Provide accurate, helpful responses to technical questions."
-    
+
     for _, row in inputs_df.iterrows():
         completion = openai.chat.completions.create(
             model=model,
@@ -150,7 +160,7 @@ def _generate_responses(inputs_df: pd.DataFrame, model: str) -> List[str]:
                 {"role": "system", "content": system_prompt},
                 {"role": "user", "content": row["inputs"]},
             ],
-            temperature=0.1
+            temperature=0.1,
         )
         predictions.append(completion.choices[0].message.content)
     return predictions
@@ -179,7 +189,7 @@ evaluation_run_ids = {}
 
 for version_name, app_function in apps_to_evaluate.items():
     print(f"Evaluating {version_name}...")
-    
+
     with mlflow.start_run(run_name=f"eval_{version_name}") as run:
         try:
             eval_results = mlflow.evaluate(
@@ -187,25 +197,27 @@ for version_name, app_function in apps_to_evaluate.items():
                 data=evaluation_data,
                 targets="ground_truth",
                 extra_metrics=standard_metrics,
-                evaluators="default"
+                evaluators="default",
             )
-            
+
             evaluation_run_ids[version_name] = run.info.run_id
-            
+
             # Log version-specific context
             mlflow.set_tag("version_type", "comparison_candidate")
             if "enhanced" in version_name:
                 mlflow.log_param("prompt_strategy", "enhanced_system_prompt")
             elif "gpt4" in version_name:
                 mlflow.log_param("model", "gpt-4")
-            
+
             print(f"✅ Completed {version_name}")
-            
+
         except Exception as e:
             print(f"❌ Error evaluating {version_name}: {e}")
             evaluation_run_ids[version_name] = None
 
-print(f"Successfully evaluated: {sum(1 for rid in evaluation_run_ids.values() if rid is not None)}/{len(apps_to_evaluate)} versions")
+print(
+    f"Successfully evaluated: {sum(1 for rid in evaluation_run_ids.values() if rid is not None)}/{len(apps_to_evaluate)} versions"
+)
 ```
 
 ## Analyzing Comparison Results
@@ -229,27 +241,32 @@ For deeper analysis, use MLflow's tracking API to compare results programmatical
 ```python
 def analyze_version_performance(run_ids: dict):
     """Analyze and compare performance across different versions."""
-    
+
     # Filter out failed runs
     valid_runs = {name: rid for name, rid in run_ids.items() if rid is not None}
-    
+
     if not valid_runs:
         print("No valid runs available for comparison")
         return None
-    
+
     # Fetch run data
     runs_df = mlflow.search_runs(run_ids=list(valid_runs.values()))
-    runs_df['version_name'] = runs_df['run_id'].map({v: k for k, v in valid_runs.items()})
-    
+    runs_df["version_name"] = runs_df["run_id"].map(
+        {v: k for k, v in valid_runs.items()}
+    )
+
     # Extract metrics for comparison
-    metric_columns = [col for col in runs_df.columns if col.startswith('metrics.')]
-    comparison_cols = ['version_name'] + metric_columns
-    comparison_df = runs_df[comparison_cols].set_index('version_name')
-    
+    metric_columns = [col for col in runs_df.columns if col.startswith("metrics.")]
+    comparison_cols = ["version_name"] + metric_columns
+    comparison_df = runs_df[comparison_cols].set_index("version_name")
+
     # Clean column names
-    comparison_df.columns = [col.replace('metrics.', '') for col in comparison_df.columns]
-    
+    comparison_df.columns = [
+        col.replace("metrics.", "") for col in comparison_df.columns
+    ]
+
     return comparison_df
+
 
 # Perform the analysis
 comparison_results = analyze_version_performance(evaluation_run_ids)
@@ -257,11 +274,11 @@ comparison_results = analyze_version_performance(evaluation_run_ids)
 if comparison_results is not None:
     print("📊 Version Performance Comparison:")
     print(comparison_results.round(3))
-    
+
     # Identify best performing versions
-    key_metrics = ['answer_correctness/v1/mean', 'answer_relevance/v1/mean']
+    key_metrics = ["answer_correctness/v1/mean", "answer_relevance/v1/mean"]
     available_metrics = [m for m in key_metrics if m in comparison_results.columns]
-    
+
     if available_metrics:
         print("\n🏆 Best Performing Versions:")
         for metric in available_metrics:
@@ -276,39 +293,42 @@ if comparison_results is not None:
 ```python
 def generate_recommendations(comparison_df):
     """Generate version selection recommendations."""
-    
+
     if comparison_df is None or len(comparison_df) == 0:
         return
-    
+
     print("\n💡 Recommendations:")
-    
+
     # Simple weighted scoring
-    key_metrics = ['answer_correctness/v1/mean', 'answer_relevance/v1/mean']
+    key_metrics = ["answer_correctness/v1/mean", "answer_relevance/v1/mean"]
     available_metrics = [m for m in key_metrics if m in comparison_df.columns]
-    
+
     if len(available_metrics) >= 2:
         # Calculate overall score
-        weights = {'answer_correctness/v1/mean': 0.6, 'answer_relevance/v1/mean': 0.4}
-        
+        weights = {"answer_correctness/v1/mean": 0.6, "answer_relevance/v1/mean": 0.4}
+
         overall_scores = pd.Series(0.0, index=comparison_df.index)
         for metric in available_metrics:
             if metric in weights:
                 # Normalize to 0-1 scale
                 metric_values = comparison_df[metric].dropna()
                 if len(metric_values) > 1:
-                    normalized = (metric_values - metric_values.min()) / (metric_values.max() - metric_values.min())
+                    normalized = (metric_values - metric_values.min()) / (
+                        metric_values.max() - metric_values.min()
+                    )
                     overall_scores += normalized * weights[metric]
-        
+
         # Show top recommendations
         ranked = overall_scores.sort_values(ascending=False)
         print("   Overall Rankings:")
         for i, (version, score) in enumerate(ranked.items(), 1):
             print(f"   {i}. {version} (score: {score:.3f})")
-    
+
     print("\n   Consider:")
     print("   • Review top performer for production deployment")
     print("   • Analyze individual responses for quality assessment")
     print("   • Factor in computational cost and latency requirements")
+
 
 # Generate recommendations
 if comparison_results is not None:
@@ -327,24 +347,29 @@ For meaningful comparisons, especially with smaller datasets, consider whether o
 ```python
 def assess_comparison_reliability(comparison_df, dataset_size):
     """Assess the reliability of version comparisons."""
-    
+
     print(f"\n⚖️ Comparison Reliability (Dataset size: {dataset_size} samples):")
-    
+
     if dataset_size < 10:
         print("⚠️  Small dataset - differences may not be meaningful")
         print("   Consider expanding evaluation dataset for reliable comparisons")
     else:
         print("✅ Dataset size adequate for comparison")
-    
+
     # Check metric variance
     if comparison_df is not None:
         numeric_cols = comparison_df.select_dtypes(include=[np.number]).columns
         for metric in numeric_cols:
             values = comparison_df[metric].dropna()
             if len(values) > 1:
-                cv = values.std() / values.mean() if values.mean() != 0 else float('inf')
+                cv = (
+                    values.std() / values.mean() if values.mean() != 0 else float("inf")
+                )
                 if cv < 0.1:
-                    print(f"📊 {metric}: Low variance - differences may not be meaningful")
+                    print(
+                        f"📊 {metric}: Low variance - differences may not be meaningful"
+                    )
+
 
 # Run reliability assessment
 if comparison_results is not None:
@@ -360,7 +385,7 @@ Document what changed between versions for better decision-making. Good document
 version_docs = {
     "v1_basic": "Baseline with minimal prompting",
     "v2_enhanced": "Added system prompt with role definition",
-    "v3_gpt4": "Upgraded to GPT-4 for improved quality"
+    "v3_gpt4": "Upgraded to GPT-4 for improved quality",
 }
 
 # Log during evaluation runs
@@ -374,7 +399,7 @@ for version_name, description in version_docs.items():
 - **[Evaluation Runs](/genai/eval-monitor/concepts/evaluation-runs)**: Understanding how evaluation results are stored and organized
 - **[Scorers](/genai/eval-monitor/concepts/scorers)**: Deep dive into the metrics used for comparison
 - **[Evaluation Datasets](/genai/eval-monitor/concepts/eval-datasets)**: Learn about versioned datasets for consistent testing
-- **[LLM Evaluation](/genai/eval-monitor/llm-evaluation)**: Comprehensive guide to LLM evaluation metrics
+- **[LLM Evaluation](/genai/eval-monitor)**: Comprehensive guide to LLM evaluation metrics
 
 ## Summary
 
